add functionality with JS
1. created all the const for buttons and display

2. create array for digits to sit in

3. created a breakLoop to shortcircuit the loop when arrayA has text

4. create a for loop over digits (including backspace)
-digit add event listener clicks
a. breakLoop === false
- pop if array has . or digit textcontent already has .
- pop if back digit is clicked
    -> reform the array
-else push the digit pressed onto the array
b. breakLoop === true
- pop if back digit is clicked
- array B push
- display textContent

5. create current operator

6. create a for loop for operators
- operator add event listener clicks
- make += operator.iD (+/-*)
- find the operator 2 before
- make loops break or not break base on if arrays are empty or not
- run the functions according to +-/* operators
- for / if a === infinity -- error
    -> zero and break out of everything
- display the results
- if keep spamming = then return a is still a and display no change.
empty out array b

7. create a list of math functions for +-/*

8. clear button
- empty arrays and clear everything. make content - and break out of
loop.

9. isDecimal()
- x%1 === 0 return x
- else make the Number(x).toFixed(2)

--- a/index.html
+++ b/index.html
@@ -15,35 +15,35 @@
 
         <div class="main-container">
             <div class="dislay-div">
-                <div class="display">123</div>
+                <div class="display">0</div>
             </div>
             <div class="first-row row"> 
                 <div class="clear"> CL </div>
-                <div class="back"> &larr; </div>
-                <div class="divide operator">&divide;</div>
+                <div class="back digit"> &larr; </div>
+                <div class="divide operator" id ="/">&divide;</div>
             </div>
             <div class="second-row row"> 
                 <div class="seven digit">7</div>
                 <div class="eight digit">8</div>
                 <div class="nine digit">9</div>
-                <div class="mul operator">&times;</div>
+                <div class="mul operator" id ="*">&times;</div>
             </div>
             <div class="third-row row"> 
                 <div class="four digit">4</div>
                 <div class="five digit">5</div>
                 <div class="six digit">6</div>
-                <div class="minus operator">&minus;</div>
+                <div class="minus operator" id ="-">&minus;</div>
             </div>
             <div class="fourth-row row"> 
                 <div class="one digit">1</div>
                 <div class="two digit">2</div>
                 <div class="three digit">3</div>
-                <div class="plus operator">&plus;</div>
+                <div class="plus operator" id ="+">&plus;</div>
             </div>
             <div class="fifth-row row"> 
-                <div class="dot digit">&sdot;</div>
+                <div class="dot digit">.</div>
                 <div class="zero digit">0</div>
-                <div class="equals digit">&equals;</div>
+                <div class="equals operator" id ="=">&equals;</div>
             </div>
         </div>
 
